--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "devStart": "nodemon app.js"
+    "start": "python -m http.server --cgi 5000",
+    "start1": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
